# gh-pr-cli

./: Cargo.toml  README.md
src/: cli.rs  main.rs
