[package]
name = "gh-pr-cli"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-openai = "0.10.2"
chrono = "0.4.24"
clap = { version = "4.2.1", features = ["derive"] }
colored = "2.0.0"
dotenvy = "0.15.7"
futures = "0.3.28"
octocrab = "0.19.0"
prettytable-rs = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.93"
tokio = { version = "1.27.0", features = ["rt", "rt-multi-thread"] }
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }
url = "2.3.1"
